# file_manager

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  start.bat  start.sh  start_dev.sh  start_windows_frontend.bat  start_windows_prod.bat  test_ws.py  test_ws_proxy.py
backend/: .env.example  pyproject.toml  requirements.clean.txt  requirements.txt  settings.json
backend/app/: config.py  main.py  task_manager.py
backend/app/routers/: clipboard.py  everything.py  everything_curl.py  files.py  fulltext.py  history.py  terminal.py
backend/static/: index.html
backend/static/assets/: index-CCexyowz.css  index-D5-ctNT7.js  index-WtKxr2sd.js  index-lw_AGWnR.js
backend/tests/: conftest.py  test_clipboard.py  test_config_api.py  test_everything_api.py  test_fast_copy.py  test_files_api.py  test_fulltext_api.py  test_obsidian.py  test_open_path.py  test_path_mapping.py  test_pwa_cache_headers.py  test_terminal.py  test_timeout_io.py
docs/: api_timeout.md  architecture.md  claude.md  everything_manual.md  external_integration.md  obsidian_daily.md  path_mapping.md  pwa_deployment.md  server_setup.md  startup_scripts.md  ui_enhancements.md  windows_deployment.md
frontend/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  scratch.ts  vite.config.ts
frontend/public/: sw.js
frontend/src/: App.css  App.tsx  config.test.ts  config.ts  index.css  main.tsx
frontend/src/api/: clipboard.ts  files.test.ts  files.ts  fulltextIndexService.test.ts  fulltextIndexService.ts  indexService.ts
scripts/: build_for_windows.sh
tests/: test_live_setup.py
(+75 files in other folders)
